collectionStyles.css
body{
  background-color: rgba(30, 30, 30, 0.945);
  color:white;
  margin-top:0px;
}

#imageCollection ul {
    display: flex;
    flex-wrap: wrap;
    list-style-type: none;
    padding-left:0px;
  }
  
#imageCollection li {
    height: 40vh;
    flex-grow: 1;
    display: flex;
  }
  
  img {
    max-height: 100%;
    min-width: 100%;
    object-fit: cover;
    vertical-align: middle;
    align-content: center;
    cursor: pointer;

  }

  ul img:hover{
      opacity: 0.7;
      transition: 0.3s;
  }

  @media (max-aspect-ratio: 1/1) {
    #imageCollection li {
      height: 30vh;
    }
  }
  
  
  @media (max-height: 480px) {
    li {
      height: 80vh;
    }
  }
  
  .modal{
      display: none;
      position: fixed;
      width: 100%;
      height:100%;
      z-index: 1;
      left:0;
      top:0;
      background-color: rgba(0,0,0,0.9);
  }

  .modal img{
      margin: auto;
      max-height: 70%;
      object-fit: contain;
      max-width: 100%;
      display: inline-block;
      vertical-align: middle
  }
  @media only screen and (max-width: 700px){
    .modal {
      width: 100%;
    }
  }

.options{
  position: absolute;
  top:0%;
  display: flex;
  right: 0%;
  left:0%;
  justify-content: stretch;
}
#modalDiv{
    color: white;
}

.close{
    cursor: pointer;
    font-size: 3em;
    position: absolute;
    background: none;
    color: white;
    z-index: 2;
    border-style: none;
    top:0%;
    right:0%;
}

#imageTitle{
    margin: auto;
}

.remove{
  border: 4px solid rgb(179, 1, 1);
  transform: scale(0.9);
}
.remove:hover{
  background: rgba(128, 29, 29, 0.82);
  opacity: 0.7;
}

#tabs{
  display: flex;
  justify-content: space-around;
  border-bottom: 1px solid white;
}
#details{
  overflow:auto;
  height:30%;
  width:100%;
}
/* clears the 'X' from Internet Explorer */
input[type=search]::-ms-clear {  display: none; width : 0; height: 0; }
input[type=search]::-ms-reveal {  display: none; width : 0; height: 0; }

/* clears the 'X' from Chrome */
input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration { display: none; }

#imagePreset, #asteroidCollection, #videoCollection, #videoList p{
  display: none;
}

#videoList li{
  width: 100%;
  height:auto;
}

#tabs  button, #tabs a{
  cursor:pointer;    
  color:white;
  background-color: rgba(30, 30, 30, 0.945);
  appearance: button;
  text-decoration: none;
  width:100%;
  border-style: none;
  padding:8px;
  text-align: center;
  font-size:1vw;
}


.iframeDiv{
  position: relative;
  max-width:100%;
  height: 70vh;
}
iframe{
  position: absolute;
  top: 0;
  left:0;
  padding:0;
  width: 100%;
  height:100%;
  max-height: 70vh;
  border-style: none;
}
@media (max-width: 1100px){
  .iframeDiv{
      position: relative;
      padding-bottom: 56.25%; /* 16:9 */
      max-width:100%;
      height:0;
  }
  iframe{
      padding:0;
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      max-height: 70vh
  } 

  #tabs  button, #tabs a{
    font-size:2vw;
  }
}
#videoList p{
  display: none;
}
#videoList{
  padding-inline-start: 20px;
}

nav{
  position: sticky;
  width: 100%;
  z-index: 1;
  top: 0%;
  background-color: white;
}

#asteroidList  a{
  border-style: outset;
  border-radius: 5%;
  box-sizing: border-box;
  cursor:pointer;    
  color:black;
  background-color: #EEEEEE;
  appearance: button;
  text-align:center;
  text-decoration: none;
  border-color: white;
  margin:2px;
}


#tabs .selected{
  background-color: rgba(95, 95, 95, 0.945)
}

#asteroidList{
  display:flex;
  flex-flow: wrap;
  list-style: none;
  padding-left:0px;
  margin:0;
  justify-content: center;
}

#asteroidList li{
  background-color: #1f4068;
  text-align: center;
  margin: 1%;
  list-style: none;
  list-style-position:inside;
  min-width: 200px;
  max-width: 100%;

}

#asteroidList li div{
  display:none;
}

